<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <LinearLayout
            android:id="@+id/numbersFrame"
            android:layout_width="21dp"
            android:layout_height="110dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/MarkerText100"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_100"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText90"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_90"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText80"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_80"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText70"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_70"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText60"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_60"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText50"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_50"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText40"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_40"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText30"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_30"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText20"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_20"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText10"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_10"
                android:textSize="6dp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/MarkerText0"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="end"
                android:text="@string/_0"
                android:textSize="6dp"
                android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/levelsFrame"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:gravity="bottom">

        <include layout="@layout/level_box"
                android:id="@+id/greenLevelBox"/>
        <include layout="@layout/level_box"
                android:id="@+id/yellowLevelBox"/>
        <include layout="@layout/level_box"
                android:id="@+id/redLevelBox"/>

</LinearLayout>

</LinearLayout>